tests/emo-files/valid/ex1.emo
# comment

:cry: "why do I have to do this?"
num n = 1;
fun x(num x, num y) num {#other comment
    whi(n < 10) {
        n = n + 1;
    }
    ret n;
}
str s = "what the " + :confused:;

# some other comment

s = s;

num y = x(1, 2)

if (y > 1) {
    :scream: y
}