tests/emo-files/invalid/unterminated-string-newline.emo
# unterminated string test (newline)

str s = "I love breaking things; fun s(num 1) {ret 6;}
